--- a/index.html
+++ b/index.html
@@ -1,1 +1,230 @@
-file:///C:/Users/User/Desktop/Resume-CV-121/index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Resume/CV Design</title>
+	<link rel="stylesheet" href="styles.css">
+	<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+</head>
+<body>
+
+<div class="resume">
+   <div class="resume_left">
+     <div class="resume_profile">
+       <img src="C:\Users\User\Desktop\自傳照1.jpg" alt="自傳照1">
+     </div>
+     <div class="resume_content">
+       <div class="resume_item resume_info">
+         <div class="title">
+           <p class="bold">莎菈.勞森Sara.Lawesson</p>
+           <p class="regular">時尚雜誌副編輯</p>
+         </div>
+         <ul>
+           <li>
+             <div class="icon">
+               <i class="fas fa-map-signs"></i>
+             </div>
+             <div class="data">
+              台北市<br /> 大安區
+             </div>
+           </li>
+           <li>
+             <div class="icon">
+               <i class="fas fa-mobile-alt"></i>
+             </div>
+             <div class="data">
+               +886 0952123355
+             </div>
+           </li>
+           <li>
+             <div class="icon">
+               <i class="fas fa-envelope"></i>
+             </div>
+             <div class="data">
+               1993sara0615@gmail.com
+             </div>
+           </li>
+           <li>
+             <div class="icon">
+               <i class="fab fa-weebly"></i>
+             </div>
+             <div class="data">
+               www.Sara0615.com
+             </div>
+           </li>
+         </ul>
+       </div>
+       <div class="resume_item resume_skills">
+         <div class="title">
+           <p class="bold">skill's</p>
+         </div>
+         <ul>
+           <li>
+             <div class="skill_name">
+               時尚攝影
+             </div>
+             <div class="skill_progress">
+               <span style="width: 80%;"></span>
+             </div>
+             <div class="skill_per">80%</div>
+           </li>
+           <li>
+             <div class="skill_name">
+               編輯寫作
+             </div>
+             <div class="skill_progress">
+               <span style="width: 70%;"></span>
+             </div>
+             <div class="skill_per">70%</div>
+           </li>
+           <li>
+             <div class="skill_name">
+               時尚傳播
+             </div>
+             <div class="skill_progress">
+               <span style="width: 90%;"></span>
+             </div>
+             <div class="skill_per">90%</div>
+           </li>
+           <li>
+             <div class="skill_name">
+               時尚行銷
+             </div>
+             <div class="skill_progress">
+               <span style="width: 60%;"></span>
+             </div>
+             <div class="skill_per">60%</div>
+           </li>
+           <li>
+             <div class="skill_name">
+               視覺藝術
+             </div>
+             <div class="skill_progress">
+               <span style="width: 88%;"></span>
+             </div>
+             <div class="skill_per">88%</div>
+           </li>
+         </ul>
+       </div>
+       <div class="resume_item resume_social">
+         <div class="title">
+           <p class="bold">Social</p>
+         </div>
+         <ul>
+           <li>
+             <div class="icon">
+               <i class="fab fa-facebook-square"></i>
+             </div>
+             <div class="data">
+               <p class="semi-bold">Facebook</p>
+               <p>Stephen@facebook</p>
+             </div>
+           </li>
+           <li>
+             <div class="icon">
+               <i class="fab fa-twitter-square"></i>
+             </div>
+             <div class="data">
+               <p class="semi-bold">Twitter</p>
+               <p>SaraLawesson@twitter</p>
+             </div>
+           </li>
+           <li>
+             <div class="icon">
+               <i class="fab fa-youtube"></i>
+             </div>
+             <div class="data">
+               <p class="semi-bold">Youtube</p>
+               <p>SaraLawesson@youtube</p>
+             </div>
+           </li>
+           <li>
+             <div class="icon">
+               <i class="fab fa-linkedin"></i>
+             </div>
+             <div class="data">
+               <p class="semi-bold">Linkedin</p>
+               <p>SaraLawesson@linkedin</p>
+             </div>
+           </li>
+         </ul>
+       </div>
+     </div>
+  </div>
+  <div class="resume_right">
+    <div class="resume_item resume_about">
+        <div class="title">
+           <p class="bold">About me</p>
+         </div>
+        <p>專業自信，開放多元。</p>
+    </div>
+    <div class="resume_item resume_work">
+        <div class="title">
+           <p class="bold">Work Experience</p>
+         </div>
+        <ul>
+            <li>
+                <div class="date">2016年 - 2017年 活動策劃實習生</div>
+                <div class="info">
+                     <p class="semi-bold"></p>
+                  <p>
+在倫敦一家時尚活動策劃公司實習，積極參與時裝秀和時尚活動的策劃和執行。與設計師、模特兒以及媒體密切合作，累積了豐富的活動策劃和執行經驗。</p>
+                </div>
+            </li>
+            <li>
+              <div class="date">2019年 - 2022 時尚編輯助理</div>
+              <div class="info">
+                     <p class="semi-bold"></p>
+                  <p>在巴黎時尚雜誌的編輯部門擔任時尚編輯助理，負責撰寫專題報導、評論和時尚新聞。參與時裝週，
+										進行現場採訪和專訪時尚設計師、模特兒，以及產業相關人士。參與雜誌的版面設計，確保視覺效果與內容相輔相成。</p>
+                </div>
+            </li>
+            <li>
+              <div class="date">2023-NOW 時尚雜誌副編輯</div>
+              <div class="info">
+                     <p class="semi-bold"></p>
+                  <p>於台灣時尚雜誌擔任時尚編輯，負責籌辦並參與時尚活動、時裝週，同時進行有深度的專題報導和時尚趨勢分析。
+										在編輯部門中領導或參與團隊，確保內容質量、風格和視覺呈現的一致性。透過社交媒體和讀者互動，不斷提升雜誌在台灣的知名度。!</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="resume_item resume_education">
+      <div class="title">
+           <p class="bold">Education</p>
+         </div>
+      <ul>
+            <li>
+                <div class="date">2014 - 2016倫敦藝術大學 時尚管理碩士</div>
+                <div class="info">
+                     <p class="semi-bold"></p>
+                  <p>在倫敦藝術大學攻讀時尚管理碩士課程，深入研究時尚產業的管理、市場趨勢和品牌策略。
+									藉由學術探討和實踐專案，建立了對時尚行業多方面的知識。</p>
+                </div>
+            </li>
+            <li>
+              <div class="date">2010 - 2014 倫敦藝術大學 時尚管理系</div>
+              <div class="info">
+                     <p class="semi-bold"></p>
+                  <p>在大學階段，她就讀於時尚管理系，並接觸視覺藝術設計以及時尚攝影等專業科目，奠定了對時尚業的基本理解和相關領域的基礎知識。
+										透過系上多元化的課程，學習了時尚行業的各個層面，還包括品牌管理、市場趨勢、時尚營銷和零售管理。</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="resume_item resume_hobby">
+      <div class="title">
+           <p class="bold">Hobby</p>
+         </div>
+       <ul>
+         <li><i class="fas fa-book"></i></li>
+         <li><i class="fas fa-gamepad"></i></li>
+         <li><i class="fas fa-music"></i></li>
+         <li><i class="fab fa-pagelines"></i></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
