--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="resume">
    <div class="resume_left">
      <div class="resume_profile">
-       <img src="C:\Users\User\Desktop\自傳照1.jpg" alt="自傳照1">
+       <img src="自傳照1.jpg" alt="自傳照1">
      </div>
      <div class="resume_content">
        <div class="resume_item resume_info">
